# pid_classify

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile-dev  README.md  main.py  pid_category.py  pid_classify.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_pid_classify.py
.claude/: settings.local.json
app/: main.py
app/static/: tsconfig.json
app/static/src/: main.ts
lib/: pid_classify.py
pid_classify/lib/: pid_category.py  pid_classify.py
static/: tsconfig.json
static/src/: main.ts
templates/: index.html  predict_misc_test.html
